# EditingHelper

./: CHANGELOG.md  README.md  pyproject.toml
.github/: release-body.md
.github/workflows/: build-app.yml
docs/: APP_GUIDE.md  FCP_GUIDE.md  IOS_GUIDE.md  PORTING.md  SIGNING.md
ios/: project.yml
ios/EditSync/: AppModel.swift  AudioExtractor.swift  CompositionBuilder.swift  ContentView.swift  EditSyncApp.swift  Models.swift  OptionsView.swift  PreviewView.swift  SyncEngine.swift  Theme.swift  TimelinePlanner.swift  TitleCardLayer.swift
packaging/: build_macos.sh  build_windows.ps1  editsync.spec  entitlements.plist  launch_app.py  setup_signing.sh
src/editsync/: __init__.py  audio.py  autoedit.py  builder.py  cli.py  media.py  pngutil.py  renderer.py  report.py  sync.py  testmode.py  timeline.py  titlecard.py  titles.py  updater.py
src/editsync/exporters/: __init__.py  capcut.py  fcpxml.py  otio.py  premiere.py
src/editsync/gui/: __init__.py  app.py  editor.py  recreational.py  style.py  testmode.py  title_picker.py  update.py  viewer.py  widgets.py  window.py  worker.py
tests/: conftest.py  test_autoedit.py  test_capcut.py  test_exporters.py  test_gui.py  test_integration.py  test_media.py  test_music.py  test_recreational.py  test_renderer.py  test_sync.py  test_testmode.py  test_timeline.py  test_titles.py  test_updater.py  test_viewer.py
