[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "editsync"
version = "0.1.0"
description = "Audio-sync multicam footage (DJI + Meta glasses) into Final Cut Pro, Premiere, and OTIO timelines"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = ["numpy>=1.24"]

[project.scripts]
editsync = "editsync.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
