[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "editsync"
version = "1.6.0"
description = "Audio-sync multicam footage (DJI + Meta glasses) into Final Cut Pro, Premiere, and OTIO timelines"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
# certifi: the packaged app's ssl module has no CA store without it,
# which silently broke the update check on every machine
dependencies = ["numpy>=1.24", "certifi"]

[project.optional-dependencies]
gui = ["PySide6>=6.6"]

[project.scripts]
editsync = "editsync.cli:main"

[project.gui-scripts]
editsync-app = "editsync.gui.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"editsync.gui" = ["assets/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
